@@ -1,3 +1,6 @@
 # Snake
-A simple version of the game Snake, created using the JavaFX library
-Requires javaFX 23 and Java JDK 22.0.2
+A simple version of the game Snake, created using the JavaFX library.
+Requires javaFX 23 and Java JDK 22.0.2.
+Local IDE requires run configuration, "--module-path
+"C:\your path here"
+--add-modules=javafx.base,javafx.controls,javafx.graphics,javafx.media
